# python-windows-service-example

./: README.md  README.rst  pyproject.toml
dev/: main.py
